Fixed all the tests.  166 tests passing.